# CNN_Deep_learning_project

./: .gitignore  Insert Into Statements_33.docx  Insert Into Statements_33.txt  LICENSE  README.md  dvc.yaml  init_setup.sh  params.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  scores.json  setup.cfg  setup.py  template.py  tox.ini
.github/workflows/: ci.yml
artifacts/: .gitignore
artifacts/data_ingestion/: .gitignore
artifacts/prepare_base_model/base_model_updated/: keras_metadata.pb  saved_model.pb
artifacts/prepare_base_model/base_model_updated/variables/: variables.index
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2022-09-25-11-40-49/train/: events.out.tfevents.1664086258.LAPTOP-2RQ32QP0.14256.0.v2
configs/: config.yaml
prediction_service/: Dockerfile  app.py  requirements.txt
research/: st_01.ipynb  st_02.ipynb  st_03.ipynb  st_04.ipynb  st_05_trials.ipynb  trials.ipynb
research/mlflow_dir/: argv_ex.py  example.py
src/DeepClassifier/: __init__.py
src/DeepClassifier/components/: __init__.py  data_ingestion.py  evaluation.py  prepare_base_model.py  prepare_callback.py  training.py
src/DeepClassifier/config/: __init__.py  configuration.py
src/DeepClassifier/entity/: __init__.py  config_entity.py
src/DeepClassifier/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_training.py  stage_04_evaluation.py
src/DeepClassifier/utils/: __init__.py  commom.py  common.py
tests/integration/: test_data_ingestion.py
tests/unit/: test_data_ingestion.py  test_utils.py
(+1 files in other folders)
