## setup.cfg contains all the metadata of ghe project

[metadata]
license = MIT
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent   ## should work on all the operating systems

[options]  
install_requires =
    ensure==1.0.2
python_requires = >=3.7       ## minimum python version required to run the project

[options.extras_require]
testing =                 ## testing packages
    pytest>=7.1.3   ## It will help us run the unit test and the integration test
    mypy>=0.971     ## It will help us find out the typing errors
    flake8>=5.0.4   ## It will help us find out whether we have done any mistakes in the code
    tox>=3.25.1     ## It will help us to create  different environments to test it locally
    black>=22.8.0    ## black will ensure that whether our project is following the standard python structure

[options.package_data]  ## where our files are there
DeepClassifier = py.typed      ##py.typed will ignore the errors for the package
  
[flake8]        ##It will check the standardization of the code and python processes
# max-line-length = 160  ## It will check whether the max length of code in a line is 160
exclude = __init__.py  ## We need to exclude the __init__.py file checking

